--- a/src/MvcMovie/web.config
+++ b/src/MvcMovie/web.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
+  <appSettings>
+    <add key="IMDBApiKey" value="f90e14f3-9b18-47be-b213-75da0f686986"/>
+  </appSettings>
   <!--
     Configure your application settings in appsettings.json. Learn more at http://go.microsoft.com/fwlink/?LinkId=786380
   -->
