--- a/src/MvcMovie/project.json
+++ b/src/MvcMovie/project.json
@@ -46,7 +46,8 @@
       "type": "build"
     },
     "Newtonsoft.Json": "9.0.1",
-    "System.Net.Http": "4.3.0"  },
+    "System.Net.Http": "4.3.0",
+    "Microsoft.jQuery.Unobtrusive.Ajax": "3.2.3"  },
 
   "tools": {
     "BundlerMinifier.Core": "2.0.238",
